# GhostHunter

./: .gitignore  CLAUDE.md  CMakeLists.txt  GhostHunter.sln  LICENSE  README.md
.github/workflows/: build.yml
Excutable/res/model/emoji/: LoseEmoji.mtl
Excutable/res/model/sphere/: OBJ.mtl
Excutable/res/shaders/: crosshair.fragmentshader  lightFragmentShader.fragmentshader  simpleShader.fragmentshader  simpleShader.vertexshader
GhostHunter/: GhostHunter.vcxproj  GhostHunter.vcxproj.filters
GhostHunter/src/: glad.c  main.cpp
common/: World.cpp  World.h  admin.cpp  admin.h  app.cpp  app.h  camera.cpp  camera.h  ghost.cpp  ghost.h  player.cpp  player.h  shaders.cpp  shaders.h  tools.cpp  tools.h
common/model/: mesh.cpp  mesh.h  model.cpp  model.h
config/: Assimp.props  OpenGL.props
include/glad/: glad.h
lib/: assimp-vc143-mt.lib
res/model/emoji/: WinEmoji.mtl
res/model/vacuum/: vacuum.mtl
res/shaders/: crosshair.vertexshader  ghost.fragmentshader  ghost.vertexshader
